--- a/ui/customer-ui/src/app/product-list/product-list-result/popular-result/popular-result.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list-result/popular-result/popular-result.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="products?.popular">
   <div class="popular-big-card card">
     <div class="container">
       <div class="popular-content-group row">
@@ -73,13 +73,13 @@
       </div>
     </div>
   </div>
-  <div class="popular-small-card card">
+  <div class="popular-small-card card" *ngIf="products?.products[1]">
     <img src="../../../../assets/imagesProductList/Image_Brazilian%20Santos_Product%20Listing.png"
          class="card-img-top">
     <div class="container">
-      <a class="card-title" routerLink="/productDetails/{{this.products?.products[0].productId}}">
-        {{this.products?.products[0].title}}</a>
-      <h3 class="card-title">USD {{this.products?.products[0].price}}</h3>
+      <a class="card-title" routerLink="/productDetails/{{this.products?.products[1].productId}}">
+        {{this.products?.products[1].title}}</a>
+      <h3 class="card-title">USD {{this.products?.products[1].price}}</h3>
       <button class="btn btn-dark" (click)="addToCard()">ADD TO CART</button>
     </div>
   </div>
