--- a/ui/customer-ui/src/app/product-list/product-list.component.html
+++ b/ui/customer-ui/src/app/product-list/product-list.component.html
@@ -6,7 +6,8 @@
   <div class="row">
     <div class="col-4">
       <form class="sticky-top">
-        <app-search-form (requestSearchForm)="submitSearchForm()"></app-search-form>
+        <app-search-form (requestSearchForm)="submitSearchForm()"
+                         (resetSearchForm)="resetSearchForm()"></app-search-form>
       </form>
     </div>
     <div class="col-8">
